--- a/src/main/res/layout/activity_login_activitiy.xml
+++ b/src/main/res/layout/activity_login_activitiy.xml
@@ -33,13 +33,19 @@
         android:hint="password"
         android:inputType="textPassword" />
 
-    <!--
+
+    <Button
+        android:id="@+id/loginBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login" />
+
     <ImageView
 
         android:id="@+id/flagImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scr="@drawable/flag/flag.png" />
- -->
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+      <!--  android:scr="@drawable/flag" -->
+
 </LinearLayout>
 
